--- a/.gitignore
+++ b/.gitignore
@@ -59,4 +59,7 @@ package-lock.json
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+
+# Others
+todo.md
 .code-workspace
