--- a/package.json
+++ b/package.json
@@ -13,21 +13,22 @@
   "author": "german",
   "license": "ISC",
   "engines": {
-    "node": "18"
+    "node": "23.1.0"
   },
-  "type": "commonjs",
   "dependencies": {
     "@apollo/server": "^4.11.2",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "express-async-error": "^0.0.2",
     "express-validator": "^7.2.0",
+    "fs": "^0.0.1-security",
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
     "ts-lib": "^0.0.5",
-    "ts-node": "^10.9.2",
     "tslog": "^4.9.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.8.4",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
@@ -38,7 +39,9 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.6.0",
     "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
     "tslib": "^2.8.0",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
   }
