--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   "dependencies": {
     "@apollo/server": "^4.11.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-error": "^0.0.2",
     "express-validator": "^7.2.0",
     "fs": "^0.0.1-security",
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
+    "mongodb": "^6.10.0",
+    "moongose": "^1.0.0",
     "ts-lib": "^0.0.5",
     "tslog": "^4.9.3"
   },
