mongoose package corrected and progress in mongo

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "graphql": "^16.9.0",
     "graphql-http": "^1.22.1",
     "mongodb": "^6.10.0",
-    "moongose": "^1.0.0",
+    "mongoose": "^8.8.1",
     "ts-lib": "^0.0.5",
     "tslog": "^4.9.3"
   },
