--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint src/**/*.ts",
     "build": "tsc",
     "build --watch": "tsc --watch",
-    "start": "nodemon src/index.ts",
+    "start": "node lib/index.js",
+    "start-dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "german",
@@ -43,7 +44,6 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.6.0",
     "nodemon": "^3.1.7",
-    "ts-node": "^10.9.2",
     "tslib": "^2.8.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
